# SepFP

./: .gitignore  AGENTS.md  asid_research_plan_final_refined.md  package-lock.json  pyproject.toml
configs/: train.yaml  train_4stem_scratch.yaml  train_asid_only.yaml  train_asid_only_full.yaml  train_asid_only_scratch.yaml
configs/callbacks/: default.yaml  full.yaml  full_probe.yaml  full_probe_asid_only.yaml  full_probe_asid_only_full.yaml  full_probe_asid_only_scratch.yaml
configs/checkpoint/: none.yaml  resume.yaml  resume_weights_only.yaml
configs/data/: default.yaml  full.yaml  full_effect.yaml  full_effect_asid_only.yaml  moisesdb_4stem_full_effect.yaml  musdb18hq_4stem_train_moisesdb_val.yaml  poc.yaml  val32_seed0.yaml
configs/logger/: csv.yaml  wandb.yaml  wandb_4stem_scratch.yaml  wandb_asid_only.yaml  wandb_asid_only_full.yaml  wandb_asid_only_scratch.yaml
configs/loss/: sepfp.yaml
data/: prepare_moisesdb_for_sepfp.py
md_files/: 00_master_document.md  01_riou_baseline_analysis.md  02_contrastive_learning_design.md  03_open_issues.md  04_codex_onboarding.md  05_sep_lower_bound_measurement.md  06_retrieval_logic_design.md
scripts/: diagnose_sep_overfit.py  make_moisesdb_split.py  measure_sep_lower_bound.py  train_sepfp.py
tests/: test_checkpointing.py  test_crop_geometry.py  test_dataset_mixing.py  test_effects.py  test_linear_mag_contract.py  test_losses.py  test_normalization.py  test_optimizer.py  test_probe_callback.py  test_ref_stretch_alignment.py  test_shapes.py  test_stem_set_config.py  test_targets_ab.py  test_training_step_smoke.py
(+48 files in other folders)
